# tiny-tcmalloc

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_demo.cpp  test_demo.cpp
include/: central_cache.h  common.h  concurrent_alloc.h  free_list.h  malloc_alias.h  object_pool.h  page_cache.h  size_map.h  span.h  thread_cache.h
src/: central_cache.cpp  page_cache.cpp  thread_cache.cpp
test/: thread_local  thread_local.cpp
